--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boolando</title>
 
+    <!-- font awsome -->
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- CSS -->
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -14,7 +20,170 @@
 
     <header></header>
 
-    <main></main>
+    <main>
+        <div class="row">
+            <div class="product">
+
+                <div class="immagine">
+                    <img src="./img/1.webp" alt="">
+                </div>
+
+                <div class="hover">
+                    <img src="./img/1b.webp" alt="">
+                </div>
+
+                <div class="heart">
+                    <i class="fa-solid fa-heart"></i>
+                </div>
+
+                <div class="sale">
+                    <span class="red">-50%</span>
+                    <span class="green">Sostenibilità</span>
+                </div>
+
+                <div class="detail">
+                    <span>Levi's </span>
+                    <h4>RELAXED FIT TEE UNISEX</h4>
+                    <span class="price">14.99 &euro;</span>
+                    <span class="old-price">29.99 &euro;</span>
+                </div>
+
+            </div>
+
+            <div class="product">
+
+                <div class="immagine">
+                    <img src="./img/2.webp" alt="">
+                </div>
+
+                <div class="hover">
+                    <img src="./img/2b.webp" alt="">
+                </div>
+
+                <div class="heart">
+                    <i class="fa-solid fa-heart"></i>
+                </div>
+
+                <div class="sale">
+                    <span class="red">-30%</span>
+                </div>
+
+                <div class="detail">
+                    <span>Maya Deluxe</span>
+                    <h4>STRIPE BODICE</h4>
+                    <span class="price">99.99 &euro;</span>
+                </div>
+
+            </div>
+
+            <div class="product">
+
+                <div class="immagine">
+                    <img src="./img/3.webp" alt="">
+                </div>
+
+                <div class="hover">
+                    <img src="./img/3b.webp" alt="">
+                </div>
+
+                <div class="heart">
+                    <i class="fa-solid fa-heart"></i>
+                </div>
+
+                <div class="sale">
+                    <span class="red">-30%</span>
+                </div>
+
+                <div class="detail">
+                    <span>Esprit</span>
+                    <h4>MAGLIONE - BLACK</h4>
+                    <span class="price">29.99 &euro;</span>
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="row">
+            <div class="product">
+
+                <div class="immagine">
+                    <img src="./img/4.webp" alt="">
+                </div>
+
+                <div class="hover">
+                    <img src="./img/4b.webp" alt="">
+                </div>
+
+                <div class="heart">
+                    <i class="fa-solid fa-heart"></i>
+                </div>
+
+                <div class="sale">
+                    <span class="red">-50%</span>
+                    <span class="green">Sostenibilità</span>
+                </div>
+
+                <div class="detail">
+                    <span>Levi's</span>
+                    <h4>TEE UNISEX </h4>
+                    <span class="price">14.99 &euro;</span>
+                    <span class="old-price">29.99 &euro;</span>
+                </div>
+
+            </div>
+
+            <div class="product">
+
+                <div class="immagine">
+                    <img src="./img/5.webp" alt="">
+                </div>
+
+                <div class="hover">
+                    <img src="./img/5b.webp" alt="">
+                </div>
+
+                <div class="heart">
+                    <i class="fa-solid fa-heart"></i>
+                </div>
+
+                <div class="detail">
+                    <span>Maya Deluxe</span>
+                    <h4>STRIPE BODICE</h4>
+                    <span class="price">99.99 &euro;</span>
+                </div>
+
+            </div>
+
+            <div class="product">
+
+                <div class="immagine">
+                    <img src="./img/6.webp" alt="">
+                </div>
+
+                <div class="hover">
+                    <img src="./img/6b.webp" alt="">
+                </div>
+
+                <div class="heart">
+                    <i class="fa-solid fa-heart"></i>
+                </div>
+
+                <div class="sale">
+                    <span class="green">Sostenibilità</span>
+                </div>
+
+                <div class="detail">
+                    <span>Esprit</span>
+                    <h4>MAGLIONE - BLACK</h4>
+                    <span class="price">29.99 &euro;</span>
+                </div>
+
+            </div>
+
+        </div>
+
+    </main>
 
     <footer></footer>
 
