--- a/index.html
+++ b/index.html
@@ -18,165 +18,196 @@
 
 <body>
 
-    <header></header>
+    <header>
+        <div class="header-container">
+            <div class="categoria">
+                <ul>
+                    <li>
+                        <h3>Uomo</h3>
+                    </li>
+                    <li>
+                        <h3>Donna</h3>
+                    </li>
+                    <li>
+                        <h3>Bambino</h3>
+                    </li>
+                </ul>
+            </div>
+            <div class="logo">
+                <img src="./img/boolean-logo.png" alt="Logo Boolean">
+            </div>
+            <div class="awsome">
+                <ul>
+                    <li><i class="fa-regular fa-user"></i></li>
+                    <li><i class="fa-regular fa-heart"></i></li>
+                    <li><i class="fa-solid fa-bag-shopping"></i></li>
+                </ul>
+            </div>
+        </div>
+    </header>
 
     <main>
-        <div class="row">
-            <div class="product">
 
-                <div class="immagine">
-                    <img src="./img/1.webp" alt="">
+        <div class="main-container">
+
+            <div class="row">
+                <div class="product">
+
+                    <div class="immagine">
+                        <img src="./img/1.webp" alt="">
+                    </div>
+
+                    <div class="hover">
+                        <img src="./img/1b.webp" alt="">
+                    </div>
+
+                    <div class="heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+
+                    <div class="sale">
+                        <span class="red">-50%</span>
+                        <span class="green">Sostenibilità</span>
+                    </div>
+
+                    <div class="detail">
+                        <span>Levi's </span>
+                        <h4>RELAXED FIT TEE UNISEX</h4>
+                        <span class="price">14.99 &euro;</span>
+                        <span class="old-price">29.99 &euro;</span>
+                    </div>
+
                 </div>
 
-                <div class="hover">
-                    <img src="./img/1b.webp" alt="">
+                <div class="product">
+
+                    <div class="immagine">
+                        <img src="./img/2.webp" alt="">
+                    </div>
+
+                    <div class="hover">
+                        <img src="./img/2b.webp" alt="">
+                    </div>
+
+                    <div class="heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+
+                    <div class="sale">
+                        <span class="red">-30%</span>
+                    </div>
+
+                    <div class="detail">
+                        <span>Maya Deluxe</span>
+                        <h4>STRIPE BODICE</h4>
+                        <span class="price">99.99 &euro;</span>
+                    </div>
+
                 </div>
 
-                <div class="heart">
-                    <i class="fa-solid fa-heart"></i>
-                </div>
+                <div class="product">
 
-                <div class="sale">
-                    <span class="red">-50%</span>
-                    <span class="green">Sostenibilità</span>
-                </div>
+                    <div class="immagine">
+                        <img src="./img/3.webp" alt="">
+                    </div>
 
-                <div class="detail">
-                    <span>Levi's </span>
-                    <h4>RELAXED FIT TEE UNISEX</h4>
-                    <span class="price">14.99 &euro;</span>
-                    <span class="old-price">29.99 &euro;</span>
-                </div>
+                    <div class="hover">
+                        <img src="./img/3b.webp" alt="">
+                    </div>
 
-            </div>
+                    <div class="heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
 
-            <div class="product">
+                    <div class="sale">
+                        <span class="red">-30%</span>
+                    </div>
 
-                <div class="immagine">
-                    <img src="./img/2.webp" alt="">
-                </div>
+                    <div class="detail">
+                        <span>Esprit</span>
+                        <h4>MAGLIONE - BLACK</h4>
+                        <span class="price">29.99 &euro;</span>
+                    </div>
 
-                <div class="hover">
-                    <img src="./img/2b.webp" alt="">
-                </div>
-
-                <div class="heart">
-                    <i class="fa-solid fa-heart"></i>
-                </div>
-
-                <div class="sale">
-                    <span class="red">-30%</span>
-                </div>
-
-                <div class="detail">
-                    <span>Maya Deluxe</span>
-                    <h4>STRIPE BODICE</h4>
-                    <span class="price">99.99 &euro;</span>
-                </div>
-
-            </div>
-
-            <div class="product">
-
-                <div class="immagine">
-                    <img src="./img/3.webp" alt="">
-                </div>
-
-                <div class="hover">
-                    <img src="./img/3b.webp" alt="">
-                </div>
-
-                <div class="heart">
-                    <i class="fa-solid fa-heart"></i>
-                </div>
-
-                <div class="sale">
-                    <span class="red">-30%</span>
-                </div>
-
-                <div class="detail">
-                    <span>Esprit</span>
-                    <h4>MAGLIONE - BLACK</h4>
-                    <span class="price">29.99 &euro;</span>
-                </div>
-
-            </div>
-
-        </div>
-
-        <div class="row">
-            <div class="product">
-
-                <div class="immagine">
-                    <img src="./img/4.webp" alt="">
-                </div>
-
-                <div class="hover">
-                    <img src="./img/4b.webp" alt="">
-                </div>
-
-                <div class="heart">
-                    <i class="fa-solid fa-heart"></i>
-                </div>
-
-                <div class="sale">
-                    <span class="red">-50%</span>
-                    <span class="green">Sostenibilità</span>
-                </div>
-
-                <div class="detail">
-                    <span>Levi's</span>
-                    <h4>TEE UNISEX </h4>
-                    <span class="price">14.99 &euro;</span>
-                    <span class="old-price">29.99 &euro;</span>
                 </div>
 
             </div>
 
-            <div class="product">
+            <div class="row">
+                <div class="product">
 
-                <div class="immagine">
-                    <img src="./img/5.webp" alt="">
+                    <div class="immagine">
+                        <img src="./img/4.webp" alt="">
+                    </div>
+
+                    <div class="hover">
+                        <img src="./img/4b.webp" alt="">
+                    </div>
+
+                    <div class="heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+
+                    <div class="sale">
+                        <span class="red">-50%</span>
+                        <span class="green">Sostenibilità</span>
+                    </div>
+
+                    <div class="detail">
+                        <span>Levi's</span>
+                        <h4>TEE UNISEX </h4>
+                        <span class="price">14.99 &euro;</span>
+                        <span class="old-price">29.99 &euro;</span>
+                    </div>
+
                 </div>
 
-                <div class="hover">
-                    <img src="./img/5b.webp" alt="">
+                <div class="product">
+
+                    <div class="immagine">
+                        <img src="./img/5.webp" alt="">
+                    </div>
+
+                    <div class="hover">
+                        <img src="./img/5b.webp" alt="">
+                    </div>
+
+                    <div class="heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
+
+                    <div class="detail">
+                        <span>Maya Deluxe</span>
+                        <h4>STRIPE BODICE</h4>
+                        <span class="price">99.99 &euro;</span>
+                    </div>
+
                 </div>
 
-                <div class="heart">
-                    <i class="fa-solid fa-heart"></i>
-                </div>
+                <div class="product">
 
-                <div class="detail">
-                    <span>Maya Deluxe</span>
-                    <h4>STRIPE BODICE</h4>
-                    <span class="price">99.99 &euro;</span>
-                </div>
+                    <div class="immagine">
+                        <img src="./img/6.webp" alt="">
+                    </div>
 
-            </div>
+                    <div class="hover">
+                        <img src="./img/6b.webp" alt="">
+                    </div>
 
-            <div class="product">
+                    <div class="heart">
+                        <i class="fa-solid fa-heart"></i>
+                    </div>
 
-                <div class="immagine">
-                    <img src="./img/6.webp" alt="">
-                </div>
+                    <div class="sale">
+                        <span class="green">Sostenibilità</span>
+                    </div>
 
-                <div class="hover">
-                    <img src="./img/6b.webp" alt="">
-                </div>
+                    <div class="detail">
+                        <span>Esprit</span>
+                        <h4>MAGLIONE - BLACK</h4>
+                        <span class="price">29.99 &euro;</span>
+                    </div>
 
-                <div class="heart">
-                    <i class="fa-solid fa-heart"></i>
-                </div>
-
-                <div class="sale">
-                    <span class="green">Sostenibilità</span>
-                </div>
-
-                <div class="detail">
-                    <span>Esprit</span>
-                    <h4>MAGLIONE - BLACK</h4>
-                    <span class="price">29.99 &euro;</span>
                 </div>
 
             </div>
