--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
 <body>
 
+    <!-- intestazione -->
+
     <header>
         <div class="header-container">
             <div class="categoria">
@@ -46,9 +48,15 @@
         </div>
     </header>
 
+    <!-- /intestazione -->
+
+    <!-- prodotti -->
+
     <main>
 
         <div class="main-container">
+
+            <!-- row top -->
 
             <div class="row">
                 <div class="product">
@@ -133,6 +141,10 @@
 
             </div>
 
+            <!--/ row top -->
+
+            <!-- row bottom -->
+
             <div class="row">
                 <div class="product">
 
@@ -212,11 +224,47 @@
 
             </div>
 
+            <!--/ row bottom -->
+
         </div>
+
+        <!-- /prodotti -->
 
     </main>
 
-    <footer></footer>
+    <footer>
+
+        <!-- footer left -->
+
+        <div class="footer-container">
+            <div class="info">
+                <h3>Boolando S.r.l.</h3>
+                <ul>
+                    <li>Informazioni legali</li>
+                    <li>Infomativa sulla privacy</li>
+                    <li>Diritto di recesso</li>
+                </ul>
+            </div>
+
+            <!--/ footer left -->
+
+            <!-- footer right -->
+
+            <div class="social">
+                <h3>Trovaci anche su</h3>
+                <ul>
+                    <li><i class="fa-brands fa-x-twitter"></i></li>
+                    <li><i class="fa-brands fa-square-facebook"></i></li>
+                    <li><i class="fa-brands fa-instagram"></i></li>
+                    <li><i class="fa-brands fa-square-pinterest"></i></li>
+                    <li><i class="fa-brands fa-youtube"></i></li>
+                </ul>
+            </div>
+        </div>
+
+        <!--/ footer right -->
+
+    </footer>
 
 </body>
 
