--- a/index.html
+++ b/index.html
@@ -25,13 +25,19 @@
             <div class="categoria">
                 <ul>
                     <li>
-                        <h3>Uomo</h3>
+                        <a href="#">
+                            <h3>Uomo</h3>
+                        </a>
                     </li>
                     <li>
-                        <h3>Donna</h3>
+                        <a href="#">
+                            <h3>Donna</h3>
+                        </a>
                     </li>
                     <li>
-                        <h3>Bambino</h3>
+                        <a href="#">
+                            <h3>Bambino</h3>
+                        </a>
                     </li>
                 </ul>
             </div>
@@ -40,9 +46,9 @@
             </div>
             <div class="awsome">
                 <ul>
-                    <li><i class="fa-regular fa-user"></i></li>
-                    <li><i class="fa-regular fa-heart"></i></li>
-                    <li><i class="fa-solid fa-bag-shopping"></i></li>
+                    <li><a href="#"><i class="fa-regular fa-user"></i></a></li>
+                    <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
+                    <li><a href="#"><i class="fa-solid fa-bag-shopping"></i></a></li>
                 </ul>
             </div>
         </div>
@@ -240,9 +246,9 @@
             <div class="info">
                 <h3>Boolando S.r.l.</h3>
                 <ul>
-                    <li>Informazioni legali</li>
-                    <li>Infomativa sulla privacy</li>
-                    <li>Diritto di recesso</li>
+                    <li><a href="#">Informazioni legali</a></li>
+                    <li><a href="#">Infomativa sulla privacy</a></li>
+                    <li><a href="#">Diritto di recesso</a></li>
                 </ul>
             </div>
 
@@ -253,11 +259,11 @@
             <div class="social">
                 <h3>Trovaci anche su</h3>
                 <ul>
-                    <li><i class="fa-brands fa-x-twitter"></i></li>
-                    <li><i class="fa-brands fa-square-facebook"></i></li>
-                    <li><i class="fa-brands fa-instagram"></i></li>
-                    <li><i class="fa-brands fa-square-pinterest"></i></li>
-                    <li><i class="fa-brands fa-youtube"></i></li>
+                    <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-square-facebook"></i></a></i></li>
+                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-square-pinterest"></i></a></i></li>
+                    <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
                 </ul>
             </div>
         </div>
