--- a/index.html
+++ b/index.html
@@ -64,24 +64,24 @@
 
             <!-- row top -->
 
-            <div class="row">
+            <div class="row top">
                 <div class="product">
 
                     <div class="immagine">
-                        <img src="./img/1.webp" alt="">
-                    </div>
+                        <img src="./img/1.webp" alt="Immagine prodotto">
 
-                    <div class="hover">
-                        <img src="./img/1b.webp" alt="">
-                    </div>
+                        <div class="hover">
+                            <img src="./img/1b.webp" alt="Immagine prodotto">
+                        </div>
 
-                    <div class="heart">
-                        <i class="fa-solid fa-heart"></i>
-                    </div>
+                        <div class="heart">
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
 
-                    <div class="sale">
-                        <span class="red">-50%</span>
-                        <span class="green">Sostenibilità</span>
+                        <div class="sale">
+                            <span class="red">-50%</span>
+                            <span class="green">Sostenibilità</span>
+                        </div>
                     </div>
 
                     <div class="detail">
@@ -93,22 +93,23 @@
 
                 </div>
 
+
                 <div class="product">
 
                     <div class="immagine">
-                        <img src="./img/2.webp" alt="">
-                    </div>
+                        <img src="./img/2.webp" alt="Immagine prodotto">
 
-                    <div class="hover">
-                        <img src="./img/2b.webp" alt="">
-                    </div>
+                        <div class="hover">
+                            <img src="./img/2b.webp" alt="Immagine prodotto">
+                        </div>
 
-                    <div class="heart">
-                        <i class="fa-solid fa-heart"></i>
-                    </div>
+                        <div class="heart">
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
 
-                    <div class="sale">
-                        <span class="red">-30%</span>
+                        <div class="sale">
+                            <span class="red">-30%</span>
+                        </div>
                     </div>
 
                     <div class="detail">
@@ -122,19 +123,20 @@
                 <div class="product">
 
                     <div class="immagine">
-                        <img src="./img/3.webp" alt="">
-                    </div>
+                        <img src="./img/3.webp" alt="Immagine prodotto">
 
-                    <div class="hover">
-                        <img src="./img/3b.webp" alt="">
-                    </div>
+                        <div class="hover">
+                            <img src="./img/3b.webp" alt="Immagine prodotto">
+                        </div>
 
-                    <div class="heart">
-                        <i class="fa-solid fa-heart"></i>
-                    </div>
+                        <div class="heart">
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
 
-                    <div class="sale">
-                        <span class="red">-30%</span>
+                        <div class="sale">
+                            <span class="red">-30%</span>
+                        </div>
+
                     </div>
 
                     <div class="detail">
@@ -151,24 +153,25 @@
 
             <!-- row bottom -->
 
-            <div class="row">
+            <div class="row bottom">
                 <div class="product">
 
                     <div class="immagine">
-                        <img src="./img/4.webp" alt="">
-                    </div>
+                        <img src="./img/4.webp" alt="Immagine prodotto">
 
-                    <div class="hover">
-                        <img src="./img/4b.webp" alt="">
-                    </div>
+                        <div class="hover">
+                            <img src="./img/4b.webp" alt="Immagine prodotto">
+                        </div>
 
-                    <div class="heart">
-                        <i class="fa-solid fa-heart"></i>
-                    </div>
+                        <div class="heart">
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
 
-                    <div class="sale">
-                        <span class="red">-50%</span>
-                        <span class="green">Sostenibilità</span>
+                        <div class="sale">
+                            <span class="red">-50%</span>
+                            <span class="green">Sostenibilità</span>
+                        </div>
+
                     </div>
 
                     <div class="detail">
@@ -183,15 +186,16 @@
                 <div class="product">
 
                     <div class="immagine">
-                        <img src="./img/5.webp" alt="">
-                    </div>
+                        <img src="./img/5.webp" alt="Immagine prodotto">
 
-                    <div class="hover">
-                        <img src="./img/5b.webp" alt="">
-                    </div>
+                        <div class="hover">
+                            <img src="./img/5b.webp" alt="Immagine prodotto">
+                        </div>
 
-                    <div class="heart">
-                        <i class="fa-solid fa-heart"></i>
+                        <div class="heart">
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
+
                     </div>
 
                     <div class="detail">
@@ -205,19 +209,20 @@
                 <div class="product">
 
                     <div class="immagine">
-                        <img src="./img/6.webp" alt="">
-                    </div>
+                        <img src="./img/6.webp" alt="Immagine prodotto">
 
-                    <div class="hover">
-                        <img src="./img/6b.webp" alt="">
-                    </div>
+                        <div class="hover">
+                            <img src="./img/6b.webp" alt="Immagine prodotto">
+                        </div>
 
-                    <div class="heart">
-                        <i class="fa-solid fa-heart"></i>
-                    </div>
+                        <div class="heart">
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
 
-                    <div class="sale">
-                        <span class="green">Sostenibilità</span>
+                        <div class="sale">
+                            <span class="green">Sostenibilità</span>
+                        </div>
+
                     </div>
 
                     <div class="detail">
